Changing the access token storage from localStorage to cookies.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -28,3 +28,13 @@
 .bgpostmd {
     background-color: white;
 }
+
+.lope {
+    color: red;
+    border-color: red;
+    font-weight: 700;
+}
+
+.lope svg {
+    fill: red;
+}
